--- a/templates/copy-lambdas.template.yaml
+++ b/templates/copy-lambdas.template.yaml
@@ -21,7 +21,7 @@ Parameters:
     ConstraintDescription: >-
       S3 bucket name can include numbers, lowercase letters, uppercase letters,
       and hyphens (-). It cannot start or end with a hyphen (-).
-    Default: aws-quickstart
+    Default: aws-ia-us-east-1
     Description: >-
       Alphanumeric string which identifies the S3 bucket name for the Quick
       Start assets. It's the bucket to store the copy of the Quick Start assets
@@ -32,7 +32,7 @@ Parameters:
     ConstraintDescription: >-
       S3 key prefix can include numbers, lowercase letters, uppercase letters,
       hyphens (-), and forward slash (/).
-    Default: quickstart-codepipeline-bluegreen-deployment/
+    Default: cfn-ps-codepipeline-bluegreen-deployment/
     Description: >-
       Alphanumeric string which identifies the S3 key prefix used to simulate a
       folder for your copy of the Quick Start assets if you decided to customize
